--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="manifest" href="manifest.json">
     
     <!-- Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-72x72.png">
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/icon-72x72.png">
+    <link rel="apple-touch-icon" href="icon/icon-72x72.png">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
