--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="upload-box">
                 <input type="file" id="fileInput" accept=".json" hidden>
                 <label for="fileInput" class="upload-label">📁 JSON-Datei hochladen</label>
-                <button id="loadSample" class="sample-btn">Beispiel-Quiz laden</button>
+
             </div>
 
             <!-- Quiz Start -->
             <div id="startSection">
-                <p id="quizDescription">Lade eine JSON-Datei mit Fragen hoch oder verwende die Beispielfragen.</p>
+                <p id="quizDescription">Lade eine JSON-Datei mit Fragen hoch.</p>
                 <div id="quizStats" class="stats hidden">
                     <span id="questionCount">0</span> Fragen • <span id="categoryCount">0</span> Kategorien
                 </div>
