--- a/index.html
+++ b/index.html
@@ -45,23 +45,11 @@
             
             <div class="menu-content">
                 <div class="menu-section">
-                    <h3>Verfügbare Quizzes</h3>
+                    <h3>Quiz laden</h3>
                     <div class="menu-quiz-list">
-                        <button class="menu-quiz-item" data-quiz="demokratie">
-                            <span class="menu-icon">🏛️</span>
-                            <span class="menu-title">Demokratie</span>
-                        </button>
-                        <button class="menu-quiz-item" data-quiz="geschichte">
-                            <span class="menu-icon">📜</span>
-                            <span class="menu-title">Geschichte</span>
-                        </button>
-                        <button class="menu-quiz-item" data-quiz="elektronik_quiz">
-                            <span class="menu-icon">⚡</span>
-                            <span class="menu-title">Elektronik</span>
-                        </button>
                         <label for="fileInput" class="menu-quiz-item upload-item">
                             <span class="menu-icon">📁</span>
-                            <span class="menu-title">Eigene Datei</span>
+                            <span class="menu-title">JSON-Datei hochladen</span>
                             <input type="file" id="fileInput" accept=".json" hidden>
                         </label>
                     </div>
@@ -94,10 +82,11 @@
         <div class="welcome-screen" id="welcomeScreen">
             <div class="welcome-content">
                 <h1>🧠 Quiz Master</h1>
-                <p>Wähle ein Quiz aus dem Menü, um zu beginnen</p>
+                <p>Lade eine JSON-Datei hoch, wähle ein verfügbares Quiz oder nutze ein gespeichertes Quiz.</p>
+                <button id="loadQuizBtn" class="load-quiz-btn">Quiz laden</button>
                 <div class="welcome-hint">
                     <span class="burger-icon">☰</span>
-                    <span>Menü öffnen</span>
+                    <span>Menü für mehr Optionen</span>
                 </div>
             </div>
         </div>
