--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@
             
             <div class="menu-content">
                 <div class="menu-section">
-                    <h3>Quiz laden</h3>
+                    <h3>Verfügbare Quizzes</h3>
+                    <div class="menu-quiz-list">
+                        <button class="menu-quiz-item" data-quiz="demokratie">
+                            <span class="menu-icon">🏛️</span>
+                            <span class="menu-title">Demokratie</span>
+                        </button>
+                        <button class="menu-quiz-item" data-quiz="geschichte">
+                            <span class="menu-icon">📜</span>
+                            <span class="menu-title">Geschichte</span>
+                        </button>
+                        <button class="menu-quiz-item" data-quiz="elektronik_quiz">
+                            <span class="menu-icon">⚡</span>
+                            <span class="menu-title">Elektronik</span>
+                        </button>
+                    </div>
+                </div>
+                
+                <div class="menu-section">
+                    <h3>Eigene Datei</h3>
                     <div class="menu-quiz-list">
                         <label for="fileInput" class="menu-quiz-item upload-item">
                             <span class="menu-icon">📁</span>
