--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
 
         <!-- Full-Screen Quiz Interface -->
         <div id="quizContainer" class="quiz-fullscreen hidden">
-            <!-- Quiz Progress Bar -->
+            <!-- Quiz Progress Bar with Exit Button -->
             <div class="quiz-progress">
+                <button class="quiz-exit-btn" id="quizExitBtn" title="Quiz verlassen">×</button>
                 <div id="progressFill" class="progress-fill"></div>
                 <div class="progress-info">
                     <span id="currentQuestion">1</span> / <span id="totalQuestions">10</span>
