--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     
                     <div class="quiz-actions">
                         <button id="submitAnswer" class="submit-btn" disabled>Antwort bestätigen</button>
+                        <button id="nextQuestion" class="next-btn hidden">Nächste Frage</button>
                     </div>
                 </div>
 
@@ -139,7 +140,6 @@
                     <div class="explanation-content">
                         <div id="answerResult" class="result">Richtig!</div>
                         <p id="explanationText">Erklärung...</p>
-                        <button id="nextQuestion" class="next-btn">Nächste Frage</button>
                     </div>
                 </div>
             </div>
