--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     <div class="explanation-content">
                         <div id="answerResult" class="result">Richtig!</div>
                         <p id="explanationText">Erklärung...</p>
+                        <button id="nextQuestionOverlay" class="next-btn">Nächste Frage</button>
                     </div>
                 </div>
             </div>
